# sophon-light-node

./: .env  .env.example  .gitignore  Cargo.toml  DEV_README.md  Dockerfile  Dockerfile.local  Dockerfile2  README.md  availup.sh  bootstrap.sh  entrypoint.sh  identity  main.rs  main.sh  register_lc.sh  sophonup.sh
.github/workflows/: docker-build.yml  docker.yml  release.yml
src/: main.rs
src/light-node/: config.yml  main.sh  register_lc.sh  sophonup.sh
src/scripts/: main.sh  register_lc.sh  sophonup.sh
src/utils/: release.sh  sophon_node.rs
