[package]
name = "sophon-light-node"
version = "0.0.71"
edition = "2021"

[dependencies]
avail-rust = { git = "https://github.com/availproject/avail.git", rev = "4f0439f" }
clap = "4.5.20"

[[bin]]
name = "sophon-node"
path = "src/utils/sophon_node.rs"

[[bin]]
name = "generate_node_id"
path = "src/utils/id_generator.rs"
